--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 DB_NAME=app_db
 DB_USER=app_user
 DB_PASSWORD=supersecretpassword
-DB_HOST=postgres
+DB_HOST=db
 DB_PORT=5432
 TIME_ZONE=UTC
 ACCESS_TOKEN_MINUTES=15
